crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_dependency_dont_create_project.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: workspace.workspace.provenance.read().unwrap().into_inner()
---

[workspace]
name = "some-workspace"
platforms = []
channels = ['file://<LOCAL_CHANNEL>/']
preview = ['pixi-build']

[dependencies]
foo = ">=1,<2"
