crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_git_deps-2.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: pixi.workspace().unwrap().workspace.provenance.read().unwrap().into_inner()
---
[project]
name = "test-channel-change"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["win-64"]
preview = ['pixi-build']

[dependencies]
boost-check = { git = "https://github.com/wolfv/pixi-build-examples.git", branch = "main", subdirectory = "boost-check" }
