crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_git_deps_with_creds-2.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: pixi.workspace().unwrap().modify().unwrap().manifest().document.to_string()
---
[workspace]
name = "test-channel-change"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]
preview = ['pixi-build']

[dependencies]
boost-check = { git = "https://user:token123@github.com/wolfv/pixi-build-examples.git", branch = "main", subdirectory = "boost-check" }
