crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_git_with_specific_commit.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: git_package.unwrap().as_conda().unwrap().location()
---
git+https://github.com/wolfv/pixi-build-examples?subdirectory=boost-check&rev=8a1d9b9#[FULL_COMMIT]
