crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_git_with_tag.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: git_package.unwrap().as_conda().unwrap().location()
---
git+https://github.com/wolfv/pixi-build-examples?subdirectory=boost-check&rev=[REV]#[FULL_COMMIT]
