crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_plain_ssh_url.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: pixi.workspace().unwrap().workspace.provenance.read().unwrap().into_inner()
---
[workspace]
name = "test-channel-change"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]
preview = ['pixi-build']

[dependencies]
boost-check = { git = "git+ssh://git@github.com/wolfv/pixi-build-examples.git" }
