crates/pixi/tests/integration_rust/snapshots/integration_rust__add_tests__add_pypi_git-2.snap
---
source: crates/pixi/tests/integration_rust/add_tests.rs
expression: boltons.location
---
git+https://github.com/mahmoud/boltons#[FULL_COMMIT]
